@@ -116,3 +116,7 @@ title_lvl5: 50
 title_lvl6: 60
 title_lvl7: 80
 title_lvl8: 99
+
+// Minimum GM level required for client command /check (display character status) to work.
+// Default: 60
+gm_check_minlevel: 60
